fKidd 1.7.0, 2016-11-14
------------------------
- add custom logo
- add 3 footer widget areas
- bug fixes

fKidd 1.6.0, 2016-07-06
------------------------
- fix issue with Footer Menu

fKidd 1.6.0, 2016-07-05
------------------------
- make design full width
- make header fix while scrolling
- add header phone and email
- add Footer Menu

fKidd 1.5.0, 2016-02-23
------------------------
- FontAwesome update
- bug fixes
- Customizer premium theme link update

fKidd 1.4.0, 2015-10-11
------------------------
- Full theme rewrite to use customizer

fKidd 1.3.0, 2015-09-23
------------------------
- bug fixes

fKidd 1.3.0, 2015-05-02
------------------------
- small bug fixes

fKidd 1.1.0, 2015-09-27
------------------------
- Fix issue with text domain loading

fKidd 1.0.0, 2014-08-27
------------------------
- Initial release