@@ -27,13 +27,16 @@ jQuery( document ).ready(function() {
 		}
 	});
 
-	jQuery("#navmain > div > ul li").mouseleave( function() {
+	jQuery("#navmain > div > ul li").mouseleave( function(event) {
+    event.preventDefault();
 		if (fkidd_IsLargeResolution()) {
 			jQuery(this).children("ul").stop(true, true).css('display', 'block').slideUp(300);
 		}
 	});
 	
-	jQuery("#navmain > div > ul li").mouseenter( function() {
+	jQuery("#navmain > div > ul li").mouseenter( function(event) {
+
+    event.preventDefault();
 		if (fkidd_IsLargeResolution()) {
 
 			var curMenuLi = jQuery(this);
